syntax = "proto3";

option csharp_namespace="ZodiacFinderGrpc";

package ZodiacFinderGrpc;

service ZodiacService {
  rpc findZodie (BirthDateRequest) returns (ZodiacReply) {}
}

message BirthDateRequest{
  int32 day  = 1;
  int32 mo   = 2;
  int32 year = 3;
}

message ZodiacReply{
  Seasons season = 1;
  ZodiacSign sign = 2;
}

enum Seasons { 
  Spring = 0;
  Summer = 1;
  Fall = 2;
  Winter = 3;
}

enum ZodiacSign {
  Aquarius = 0;
  Pisces = 1;
  Aries = 2;
  Taurus = 3;
  Gemini = 4;
  Cancer = 5;
  Leo = 6;
  Virgo = 7;
  Libra = 8;
  Scorpio = 9;
  Sagittarius = 10;
  Capricorn = 11;
}